@@ -19,6 +19,7 @@
 ## 🛠️ Requirements
 
 - Java 21 or higher
+- JavaFX //In order to use gui
 - Maven/Gradle (if using build tools)
 
 ## 🚀 Getting Started
@@ -43,15 +44,6 @@ mvn javafx:run
 ```bash
 ./gradlew run
 ```
-
-#### Without Build Tools:
-
-```bash
-javac --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls -d bin src/main/java/com/journalkeeper/App.java
-java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls -cp bin com.journalkeeper.App
-```
-
-> **Note:** Replace `/path/to/javafx-sdk` with the actual path to your JavaFX SDK.
 
 ## 📱 Using the JavaFX Application
 
